--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Glitch Image Generator</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
   <div class="container">
