Added javascript and played with styling

--- a/main.html
+++ b/main.html
@@ -8,10 +8,9 @@
   <div class="container">
     <h1>Glitch Image Generator</h1>
     <div class="image-container">
-      <img id="original-image" src="My-photo-for-the-socials-_1_.png" alt="Original Image">
-      <img id="glitched-image" src="My-photo-for-the-socials-_1_-reverb.png" alt="Glitched Image">
+      <img id="image" src="My-photo-for-the-socials-_1_.png" alt="Image">
     </div>
-    <button id="generate-button">Generate Glitch</button>
+    <button id="generate-button">Generate</button>
     <form id="email-form">
       <h2>Send Glitched Image to Email</h2>
       <input type="email" id="email-input" placeholder="Your Email Address">
